examples/type_system/failing/11_return_type_mismatch.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/11_return_type_mismatch.flx
// error[E400]: Missing Ambient Effect
//
// Call to `print` requires effect `Console` in this function signature.
//
//   examples/type_system/failing/11_return_type_mismatch.flx:26:5
//    |
// 26 |     print("hello")
//    |     ^^^^^^^^^^^^^^
//    |     -------------- effectful call occurs here
//
// Hint:
//   Add `with Console` to the enclosing function.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E400

// E1004: Runtime return type mismatch
// `greet` declares -> String but returns an Int

fn greet(name: String) -> None {
    //42
    print("hello")
}

greet("world")
